# tgar.io

./: README.md  install.sh  interface.py  main.py  pyproject.toml  run.sh  testfile.py
doc/: conf.py  index.rst
tgar/: ainput.py  main.py
