[tool.poetry]
name = "tgar.io"
version = "0.1.0"
description = ""
authors = ["Kevin Lai <zlnh4@umsystem.edu>"]
packages = [
    { include = "tgar" },
]
[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
websockets = "^10.0"
docopt = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tgar = "tgar.main:main"